# fastapi-dramatiq

./: .env  .gitignore  Dockerfile  README.md  check_real_workflow.py  docker-compose.yml  pyproject.toml
app/: api.py  crud.py  db.py  models.py  schemas.py  settings.py
app/tasks/: broker.py  decorators.py  jobs.py  scheduled_jobs.py
tests/: conftest.py  test_workflow.py
