[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-dramatiq"
version = "0.1.0"
description = "FastAPI application with Dramatiq for background task processing"
requires-python = ">=3.13"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi==0.115.14",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.41",
    "psycopg2-binary==2.9.10",
    "dramatiq[rabbitmq]==1.18.0",
    "pika==1.3.2",
    "redis==5.0.1",
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "alembic==1.16.2",
    "requests==2.32.4",
    "email-validator==2.2.0",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.12.2",
    "pytest==8.2.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
